[package]
name = "fuzzing_baremetal"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
libafl = "0.15.2"
libafl_bolts = "0.15.2"
libafl_qemu = { version = "0.15.2", features = ["arm", "systemmode"], default-features = false }
libafl_targets = "0.15.2"

[features]
default = ["std", "breakpoint"]
std = []
arm = ["libafl_qemu/arm"]
systemmode = ["libafl_qemu/systemmode"]
tui = []
low_level  = []  # The low level way to interact with libafl qemu with direct calls to QEMU functions
breakpoint = []  # Uses the command system with breakpoints
sync_exit  = []  # Uses the command system. with sync exit

[profile.dev]
opt-level = 0
debug = true
codegen-units = 7
incremental = true
overflow-checks = true

[build-dependencies]
libafl_qemu_build = "0.15.2"
