[package]
name = "qemu_launcher"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "injections"]
std = []
clippy = []

# Build with simple event manager instead of launcher
simplemgr = []
# Enable fuzzing for injections
injections = []

arm = []
x86_64 = []
i386 = []
aarch64 = []
mips = []
ppc = []
hexagon = []

[profile.dev]
opt-level = 0
debug = true
codegen-units = 7
incremental = true
overflow-checks = true

[dependencies]
clap = "4.5.38"
libafl = "0.15.2"
libafl_bolts = "0.15.2"
libafl_qemu = "0.15.2"
libafl_targets = "0.15.2"
log = "0.4.27"
nix = "0.30.1"
vergen = "9.0.6"
vergen-git2 = "1.0.7"

[build-dependencies]
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = "1.0.1"
